fix: better invite handling
